Bug 319463 - display:none iframe pointing to a xul document stops main document from finishing to load. patch by ben, r=bz sr=bryner